<resources>
    <string name="app_name">Test</string>
    <string name="inspection">Inspections</string>
    <string name="inspection_title">Inspection Title</string>
    <string name="inspection_details">Vacation For Holiday</string>
    <string name="date">19,Feb</string>
    <string name="guest_room_101">Guest Room 101</string>
    <string name="holiday_in_express_franklin">Holiday In Express Franklin</string>
    <string name="in_progress_19_02_2024_at_11_37_am_by_david">In progress 19/02/2024 at 11.37 AM by David</string>
    <string name="cleanliness">Cleanliness</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="every_inch_of_room_has_been_sanitized">Every inch of room has been sanitized</string>
    <string name="complete">Complete</string>
</resources>